# jopenfold3

./: .gitignore  LICENSE  NOTICE  README.md  predict.py  pyproject.toml
jopenfold3/: all_modules.py  backend.py  batch.py  metrics.py  model.py  mosaic  utils.py
jopenfold3/_vendor/openfold3/: __init__.py  hacks.py  run_openfold.py  setup_openfold.py
jopenfold3/_vendor/openfold3/core/config/: config_utils.py  msa_pipeline_configs.py
jopenfold3/_vendor/openfold3/core/loss/: confidence.py  diffusion.py  distogram.py  loss_module.py
jopenfold3/_vendor/openfold3/core/metrics/: aggregate_confidence_ranking.py  model_selection.py  quality.py  rasa.py  sample_ranking.py
jopenfold3/_vendor/openfold3/core/runners/: model_runner.py  writer.py
jopenfold3/_vendor/openfold3/core/utils/: all_atom_multimer.py  atomize_utils.py  chunk_utils.py  grad_manager.py  relpos.py  (+2 more)
jopenfold3/_vendor/openfold3/entry_points/: experiment_runner.py  parameters.py  validator.py
jopenfold3/feature_embedders/: input_embedders.py  template_embedders.py
jopenfold3/heads/: head_modules.py  prediction_heads.py
jopenfold3/latent/: base_blocks.py  msa_module.py  pairformer.py  template_module.py
jopenfold3/layers/: attention_pair_bias.py  diffusion_conditioning.py  diffusion_transformer.py  msa.py  outer_product_mean.py  sequence_local_atom_attention.py  transition.py  triangular_attention.py  triangular_multiplicative_update.py
jopenfold3/primitives/: __init__.py  activations.py  attention.py  dropout.py  linear.py  normalization.py  sequential.py
jopenfold3/structure/: diffusion_module.py
(+100 files in other folders)
